--- a/pages/index.html
+++ b/pages/index.html
@@ -104,7 +104,7 @@
         </div> -->
            <!--  <img src="../images/baby.jpg">
         <img src="../images/bg1.png"> -->
-        <a href="" download="" id="poster-link" >下载</a>
+        <a href="" download="" id="poster-link" class="hidden">下载</a>
         <script type="text/javascript" src="../js/posterTool.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
     </body>
