--- a/pages/index.html
+++ b/pages/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html debug=true>
     <head>
         <meta charset="UTF-8">
         <title>海报</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <meta name="msapplication-tap-highlight" content="no" />
+        <script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>
         <style type="text/css">
             *{
                 padding: 0;
