--- a/pages/index.html
+++ b/pages/index.html
@@ -20,6 +20,9 @@
                 /*margin-top: 10px;*/
                 background-color: #fff;
             }
+            .poster{
+                z-index: 99
+            }
             .canvas-wrap{
                 display: inline-block;
                 margin: 0 auto;
@@ -44,10 +47,14 @@
                 right: 50%;
                 margin-right: -50px;
                 overflow: hidden;
-                z-index: 999;
+                z-index: 110;
                 background-color: #fff;
                 padding: 20px;
             }
+            .saveBtn{
+                z-index: 110;
+            }
+
             .hidden{
                 display: none;
             }
@@ -97,7 +104,7 @@
                 </label>
             </div>
         </div>
-        <div id="log">1111</div>
+        <!-- <div id="log">1111</div> -->
         <!-- <div class="text-center">
             <span class="canvas-wrap"> -->
                 <canvas id="poster" class="canvas" width="375" height="667"></canvas>
