--- a/pages/index.html
+++ b/pages/index.html
@@ -104,7 +104,7 @@
                 </label>
             </div>
         </div>
-        <div id="log">1111</div>
+        <div id="log"></div>
         <!-- <div class="text-center">
             <span class="canvas-wrap"> -->
                 <canvas id="poster" class="canvas" width="375" height="667"></canvas>
