--- a/pages/index.html
+++ b/pages/index.html
@@ -131,5 +131,6 @@
         <a href="" download="" id="poster-link" class="hidden">下载</a>
         <script type="text/javascript" src="../js/posterTool.js?v=1.0"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
     </body>
 </html>
